# finance-tracker

./: pyproject.toml
.devcontainer/: devcontainer.json
database/: budgets.txt  transactions.txt
src/finace_tracker/: database.py  main.py
src/finace_tracker/features/analytics/: GEMINI.md  analytics.py
src/finace_tracker/features/budgets/: GEMINI.md  budgets.py
src/finace_tracker/features/transactions/: GEMINI.md  transactions.py
tests/: test_database.py
web/: dashboard.py
