[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "finance-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "questionary>=2.1.1",
    "rich>=14.2.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
finance-tracker = "finace_tracker.main:main"
